--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "https://github.com/mars/create-react-app-buildpack"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
