--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "apollo-server-express": "^3.11.1",
     "express": "^4.17.2",
     "graphql": "^15.8.0"
-  }
+  },
+  "engines": { "node": "16.19.1" }
 }
